no support message

--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
 <p><blockquote>"Thank you very much! I appreciate this app and your brain. Life saver" <i>—<a href="http://twitter.com/Samalamfamyanan" target="_blank">Rainman</a>.</i></blockquote></p>
 <p><blockquote>"[...] The best Tweet deleter I've used :)" <i>—<a href="http://twitter.com/satchmoi" target="_blank">Satchmo</a>.</i></blockquote></p>
 
+<b><font color="red">
+I DO NOT DO support for Twitter Archive Eraser. Please check the FAQ page or ask around in the comments. 
+Don't send email/tweets with "How you uncompress the archive" OR other questions.
+</font></b>
 
 <h2>How to use</h2>
 
