--- a/faq.html
+++ b/faq.html
@@ -78,6 +78,33 @@
 <p>No.</p>
 </li>
 <li>
+	<h3>How to I filter tweets for:</h3>
+	<ul>
+		<li>
+			<b>Retweets</b>: "^RT"
+		</li>
+		<li>
+			<b>Replies</b>: "^@\w+"
+		</li>
+		<li>
+			<b>Reply to user martani_net</b>: "^@martani_net"
+		</li>
+		<li>
+			<b>Mentions</b>: "@\w+"
+		</li>
+		<li>
+			<b>Mentions of user martnai_net</b>: "@martani_net" <br/>
+			<i>This will possibly return Retweets also</i>
+		</li>
+		<li>
+			<b>Tweets containing a number with 4 digits or more</b>: "\d{4}"
+		</li>
+		<li>
+			<b>Tweets containing the word 'hello'</b>: "hello"
+		</li>
+	</ul>
+</li>
+<li>
     <h3>
       I have issues while authorizing the app with Twitter.
     </h3>
@@ -87,7 +114,8 @@
     <h3>
       How long does it takes to delete all the tweets?
     </h3>
-<p>A lot! depending on the number of tweets you are trying to delete and your internet speed. You can just run the application and leave it do the work.</p>
+<p>A lot! depending on the number of tweets you are trying to delete and your internet speed. You can just run the application and leave it do the work.<br/>
+You might also chose a larger degree of parallelism in step 4 to speed up the process.</p>
 </li>
 <li>
     <h3>
@@ -105,19 +133,18 @@
     <h3>
       Does Twitter Archive Eraser have crapware/spyware/viruses/worms/aliens-from-mars which could hurt my computer?
     </h3>
-<p>No. You can grab the source code yourself from here, compile and run it 'safely'  yourself.</p>
+<p>No. You can grab the source code yourself from here, study it, compile it, and run it 'safely' all by yourself.</p>
 </li>
 <li>
     <h3>
       I deleted my tweets but changed my mind now, how to get them back?
     </h3>
-<p>Right !?</p>
+<p>Right ! <a href='http://i3.kym-cdn.com/photos/images/newsfeed/000/629/968/b1f.gif'>Check this</a></p>
 </li>
 </ul>
 
 
     <!-- LOAD DISQUS WHEN USER SCROLLS DOWN -->
-    
     <div id="disqus_thread" data-disqus-shortname="martani-net" data-disqus-url="http://martani.github.io/Twitter-Archive-Eraser/"></div>
     
     <script type="text/javascript">
