--- a/tale.html
+++ b/tale.html
@@ -65,11 +65,11 @@
 <p>Until very recently (<i>posted on WEDNESDAY, FEBRUARY 13, 2013</i>), there was no obvious way to access your old tweets. In fact Twitter imposes a limit of 3200 tweets (the more recent ones that is) that an application can access.</p>
 <p>This means also that you cannot delete your old tweets. Several tools exist to help you delete your old tweets but, according to my experiments, most of them do not work properly, if at all, due to Twitter API's limitations.</p>
 
-<p>Last week however, Twitter enabled the option for users to download their whole archive of tweets, which contains among other things the IDs of all the tweets of a user: the exact piece of information that can be used to wipe out any tweet.</p>
+<p>Last week however, Twitter enabled the option for users to download their whole archive of tweets, which contains among other things the IDs of all the tweets of a user: the exact piece of information that can be used to erase tweet.</p>
 
-<p>I have developed a simple application called "<b>Twitter Archive Eraser</b>" that helps you delete the oldest tweets from your timeline, or wipe out the whole archive too if you would like so.</p>
+<p>I have developed a simple application called "<b>Twitter Archive Eraser</b>" that helps you delete the oldest tweets from your timeline, or erase the whole archive too if you would like so.</p>
 
-<p>The application is the simplest possible, it works in 3 steps: authenticate Twitter; select which tweets you want to delete; wipe them out.</p>
+<p>The application is the simplest possible, it works in 3 steps: authenticate Twitter; select which tweets you want to delete; erase out.</p>
 
 
     <!-- LOAD DISQUS WHEN USER SCROLLS DOWN -->
