--- a/tale.html
+++ b/tale.html
@@ -69,7 +69,7 @@
 
 <p>I have developed a simple application called "<b>Twitter Archive Eraser</b>" that helps you delete the oldest tweets from your timeline, or erase the whole archive too if you would like so.</p>
 
-<p>The application is the simplest possible, it works in 3 steps: authenticate Twitter; select which tweets you want to delete; erase out.</p>
+<p>The application is the simplest possible, it works in 3 steps: authenticate Twitter; select which tweets you want to delete; erase them.</p>
 
 
     <!-- LOAD DISQUS WHEN USER SCROLLS DOWN -->
