added doge features

--- a/index.html
+++ b/index.html
@@ -149,6 +149,10 @@ Use the following filtering expressions (without quotes "") to search for:
 I provide no support for Twitter Archive Eraser. Please check the FAQ page or ask around in the comments. 
 </center></font></b></p>
 
+<a name="features" id="features"></a>
+<h3 name="features">Features</h3>
+<center><img src="images/doge twitter archive eraser.png" width="400"/></center>
+
 <hr>
 <h3>Requirements</h3>
 <ul>
