--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta charset="ISO-8859-1">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Twitter Archive Eraser by martani</title>
 
@@ -148,11 +148,11 @@
 
 <h2>Reviews</h2>
 
-<p><blockquote>"Awesomest application ever!" <b><i>—A friend's mom</i></b>.</blockquote></p>
-<p><blockquote>"Brilliant, just brilliant." <b><i>—<a href="https://twitter.com/TheNieuws" target="_blank">Ash Rouen</a></i></b>.</blockquote></p>
-<p><blockquote>"I have been looking to really delete all my old tweets for a long time and this was the first solution that has actually worked! Many thanks." <b><i>—Louise .</i></b></blockquote></p>
-<p><blockquote>"Thank you very much! I appreciate this app and your brain. Life saver" <i>—<a href="http://twitter.com/Samalamfamyanan" target="_blank">Rainman</a>.</i></blockquote></p>
-<p><blockquote>"[...] The best Tweet deleter I've used :)" <i>—<a href="http://twitter.com/satchmoi" target="_blank">Satchmo</a>.</i></blockquote></p>
+<p><blockquote>"Awesomest application ever [for erasing tweets]!" <b><i>ï¿½Sir Isaac Newton</i></b>.</blockquote></p>
+<p><blockquote>"Brilliant, just brilliant." <b><i>ï¿½<a href="https://twitter.com/TheNieuws" target="_blank">Ash Rouen</a></i></b>.</blockquote></p>
+<p><blockquote>"I have been looking to really delete all my old tweets for a long time and this was the first solution that has actually worked! Many thanks." <b><i>ï¿½Louise .</i></b></blockquote></p>
+<p><blockquote>"Thank you very much! I appreciate this app and your brain. Life saver" <i>ï¿½<a href="http://twitter.com/Samalamfamyanan" target="_blank">Rainman</a>.</i></blockquote></p>
+<p><blockquote>"[...] The best Tweet deleter I've used :)" <i>ï¿½<a href="http://twitter.com/satchmoi" target="_blank">Satchmo</a>.</i></blockquote></p>
 
 <br/>
 <a name="features" id="features"></a>
