--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 <h2>Reviews</h2>
 
-<p><blockquote>"Awesomest application ever [for erasing tweets]!" <b><i>&mdash; Sir Isaac Newton</i></b>.</blockquote></p>
+<p><blockquote>"Awesomest application ever [for erasing tweets]!" <b><i>&mdash; Abraham Lincoln</i></b>.</blockquote></p>
 <p><blockquote>"Brilliant, just brilliant." <b><i>&mdash; <a href="https://twitter.com/TheNieuws" target="_blank">Ash Rouen</a></i></b>.</blockquote></p>
 <p><blockquote>"I have been looking to really delete all my old tweets for a long time and this was the first solution that has actually worked! Many thanks." <b><i>&mdash; Louise.</i></b></blockquote></p>
 <p><blockquote>"Thank you very much! I appreciate this app and your brain. Life saver" <i>&mdash; <a href="http://twitter.com/Samalamfamyanan" target="_blank">Rainman</a>.</i></blockquote></p>
@@ -177,6 +177,10 @@ You can now select which period of time you want to delete tweets from (grouped 
 <p>You can pause/resume the deletion process and check/uncheck tweets in between.</p>
 
 <p><center><a href="images/step3.png"><img src="images/step3.png" width="500"/></a></center></p>
+
+<h3>Step 4</h3>
+
+<p>There is no step 4.</p>
 
 <h3>Common filtering expressions</h3>
 Use the following filtering expressions (without quotes "") to search for:
