--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
 <h1><a name="twitter-archive-eraser" class="anchor" href="#twitter-archive-eraser"><span class="octicon octicon-link"></span></a>Twitter Archive Eraser</h1>
 
-<p>Twitter Archive Eraser allows you delete the oldest tweets from your timeline, or erase your whole twitter archive if you would like so.</p>
-<p>The application is the simplest possible, it works in 3 steps: authenticate with Twitter; select which tweets you want to delete; erase them with one click!</p>
+<p>Twitter Archive Eraser allows you to automatically delete tweets in bulk from your timeline, or erase your whole twitter archive if you would like so.</p>
+<p>The application is the simplest possible, it works in 3 steps: 1) authenticate with Twitter; 2) select which tweets you want to delete; 3)erase them with one click!</p>
 
 <br/>
 <center><h2 style="color:green">Number Of Tweets Deleted Since January 1st 2014:</h2></center>
@@ -145,12 +145,25 @@
 <p><blockquote>"I have been looking to really delete all my old tweets for a long time and this was the first solution that has actually worked! Many thanks." <b><i>&mdash; Louise.</i></b></blockquote></p>
 <p><blockquote>"Thank you very much! I appreciate this app and your brain. Life saver" <i>&mdash; <a href="http://twitter.com/Samalamfamyanan" target="_blank">Rainman</a>.</i></blockquote></p>
 <p><blockquote>"[...] The best Tweet deleter I've used :)" <i>&mdash; <a href="http://twitter.com/satchmoi" target="_blank">Satchmo</a>.</i></blockquote></p>
+<p><blockquote>"I was wary of downloading anything but after reading the reviews my hopes were officially high and you did not disappoint! you make it so simple while others say it's impossible, 
+and I would of happily paid for such an amazing product that does exactly what is says in just a few easy steps. basically, thank you so much! 39k tweets going down by the second ^_^
+<i>&mdash; anon</a>.</i></blockquote></p>
 
 <br/>
 <a name="features" id="features"></a>
 <h2 name="features">Features</h2>
-<center><img src="images/doge twitter archive eraser.png" width="400"/></center>
-
+<center><img src="images/doge twitter archive eraser.png" width="400" alt="
+	* Delete tweets in bulk (even the oldest of them, no limits)
+	* Load your twitter archive in one click and choose any tweets from a given month/year
+	* Filter tweets by keyword search or regular expressions search. Search retweets etc.
+	* Blazingly fast, you can choose up to 16 parallel operations.
+	"/></center>
+<div style="display: none;">
+	* Delete tweets in bulk (even the oldest of them, no limits)
+	* Load your twitter archive in one click and choose any tweets from a given month/year
+	* Filter tweets by keyword search or regular expressions search. Search retweets etc.
+	* Blazingly fast, you can choose up to 16 parallel operations.
+</div>
 <br/>
 <h2>How to use</h2>
 
@@ -296,6 +309,15 @@ I provide no support for Twitter Archive Eraser. Please check the FAQ page or as
 <hr>
 <h3>Thanks:</h3>
 <p>All the Twitter logic is done using the excellent <a href="http://linqtotwitter.codeplex.com/" target="_blank">LinqToTwitter</a> library developed by <a href="https://twitter.com/JoeMayo" target="_blank">@Joe Mayo</a>.</p>
+
+<div style="display: none;">
+What is twitter archive erase:
+	* Automatically delete/erase tweets in bulk (even the oldest of them, no limits) in one click
+	* Delete multiple tweets based on criterias: RTs, retweets, keyword, mentions etc. 
+	* Load your twitter archive in one click and choose any tweets from a given month/year
+	* Filter tweets by keyword search or regular expressions search. Search retweets etc.
+	* Blazingly fast, you can choose up to 16 parallel operations.
+</div>
 
 <hr/>
           <!-- Original Discuss 
