index,html update

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ and I would of happily paid for such an amazing product that does exactly what i
 <br/>
 <a name="features" id="features"></a>
 <h2 name="features">Features</h2>
-<center><img src="images/doge twitter archive eraser.png" width="400" alt="
+<center><img src="images/doge twitter archive eraser.png" width="400" title="
 	* Delete tweets in bulk (even the oldest of them, no limits)
 	* Load your twitter archive in one click and choose any tweets from a given month/year
 	* Filter tweets by keyword search or regular expressions search. Search retweets etc.
