update for version 4.1

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ I provide no support for Twitter Archive Eraser. Please check the FAQ page or as
 <hr>
 <h3>Requirements</h3>
 <ul>
-    <li>.NET Framework 4.0.</li>
+    <li>.NET Framework 4.5. (Use the installer version if you don't have this installed)</li>
 </ul>
 
 
@@ -258,6 +258,10 @@ I provide no support for Twitter Archive Eraser. Please check the FAQ page or as
 <hr>
 <h3>Updates</h3>
 <ul>
+	<li>
+        <b>Version 4.1</b><br>
+		<p>Several bug fixes + update to LinqToTwitter 3.0.4 and .NET framework 4.5</p>
+	</li>
 	<li>
         <b>Version 4.0</b><br>
         <p>This is a major update for Twitter Archive Eraser. It adds the following features:</p>
