--- a/index.html
+++ b/index.html
@@ -150,6 +150,10 @@ and I would of happily paid for such an amazing product that does exactly what i
 <i>&mdash; anon</a>.</i></blockquote></p>
 
 <br/>
+<h2 name="features">How to use video</h2>
+<iframe width="640" height="360" src="//www.youtube.com/embed/ZXDziGNIXMk?rel=0" frameborder="0" allowfullscreen></iframe>
+
+<br/>
 <a name="features" id="features"></a>
 <h2 name="features">Features</h2>
 <center><img src="images/doge twitter archive eraser.png" width="400" title="
