--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ and I would of happily paid for such an amazing product that does exactly what i
 
 <br/>
 <h2 name="features">How to use video</h2>
-<p><iframe width="650" height="365" src="https://www.youtube.com/watch?v=a01T_WPkQuU" frameborder="0" allowfullscreen></iframe></p>
+<p><iframe width="650" height="365" src="//www.youtube.com/embed/a01T_WPkQuU?rel=0" frameborder="0" allowfullscreen></iframe></p>
 
 <br/>
 <a name="features" id="features"></a>
