--- a/beta/index.html
+++ b/beta/index.html
@@ -3,7 +3,7 @@
       <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Corporal - Bootstrap Personal & Business Theme</title>
+        <title>Twitter Archive Eraser: Search, Filter and Bulk Delete your Oldest Tweets, Favorites, Direct Messages (DMs) Automatically</title>
 
         
 
@@ -17,7 +17,8 @@
         <link rel="stylesheet" type="text/css" href="assets/css/responsive.css">
 
         <!--Icon Fonts-->
-        <link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css" />
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+        <!--<link rel="stylesheet" media="screen" href="assets/fonts/font-awesome/font-awesome.min.css" />-->
 
 
         <!-- Extras -->
@@ -117,10 +118,10 @@
         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="nav navbar-nav col-md-9 pull-right" style="width: 70%;">
                             <li class="active"><a href="#hero-area"><i class="fa fa-home"></i> Home</a></li>
-                            <li><a href="#features"><i class="fa fa-cogs"></i> Features</a></li>
-                            <li><a href="#portfolio"><i class="fa fa-flask"></i> Portfolio</a></li>
-                            <li><a href="#clients"><i class="fa fa-puzzle-piece"></i> Clients</a></li>
-                            <li><a href="#about"><i class="fa fa-info"></i> About</a></li>
+                            <li><a href="#features"><i class="fa fa-toggle-on"></i> Features</a></li>
+                            <li><a href="#portfolio"><i class="fa fa-download"></i> Download</a></li>
+                            <li><a href="#clients"><i class="fa fa-question-circle"></i> How To</a></li>
+                            <li><a href="#about"><i class="fa fa-star"></i> Ratings</a></li>
                             <li><a href="#contact"><i class="fa fa-envelope"></i> Contact</a></li>
                             </ul>
         </div>
