--- a/beta/index.html
+++ b/beta/index.html
@@ -145,8 +145,8 @@
 								<ul class="dropdown">
 									<li><a href="releasenotes.html">Release notes</a></li>
 									<li><a href="faq.html">Faq</a></li>
-									<li><a href="howtoadvanced.html">Advanced usage</a></li>
-                                    <li><a href="tale.html">The tale</a></li>
+									<li><a href="#">Advanced usage</a></li>
+                                    <li><a href="faq.html#tale">The tale</a></li>
 								</ul>
 							</li>
 							<li><a href="#contact">Contact</a></li>
@@ -572,6 +572,13 @@ Select the tweets to delete grouped by months time range. There is no limits on 
                                                 <a class="lightbox" title="" href="images/deleted_favorites.PNG" data-lightbox-gallery="step1" data-lightbox-type="inline">
                                                     <div class="thumb-overlay"><i class="fa fa-arrows-alt"></i></div>
                                                     <img alt="" src="images/deleted_favorites.PNG" />
+                                                </a>
+
+                                            </div>
+                                                <div class="item portfolio-thumb">
+                                                <a class="lightbox" title="" href="images/months%20select%20jim.png" data-lightbox-gallery="step1" data-lightbox-type="inline">
+                                                    <div class="thumb-overlay"><i class="fa fa-arrows-alt"></i></div>
+                                                    <img alt="" src="images/months%20select%20jim.png" />
                                                 </a>
 
                                             </div>
