quick fix to index.html

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<i class="fa fa-bars"></i>
 						</button>
 						<!-- End Toggle Nav Link For Mobiles -->
-						<a class="navbar-brand" href="#container"><h3>TAE</h3></a>
+						<a class="navbar-brand" href="#container"><h3>Twitter Archive Eraser</h3></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<!-- End Search -->
@@ -476,7 +476,7 @@
                                             <div class="item  portfolio-thumb">
                                                 <a class="lightbox" title="Choose to delete tweets / Favorites / DMs.." href="images/step1.PNG" data-lightbox-gallery="step1" data-lightbox-type="inline">
                                                     <div class="thumb-overlay"><i class="fa fa-arrows-alt"></i></div>
-                                                    <img alt="" src="images/step1.PNG" />
+                                                    <img alt="" src="images/step1.png" />
                                                 </a>
                                             </div>
                                             <div class="item portfolio-thumb">
