--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                                         <!-- Start Touch Slider -->
                                         <div class="touch-slider portfolio-item" data-slider-navigation="true" data-slider-pagination="true">
                                             <div class="item  portfolio-thumb">
-                                                <a class="lightbox" title="Choose to delete tweets / Favorites / DMs.." href="images/step1.PNG" data-lightbox-gallery="step1" data-lightbox-type="inline">
+                                                <a class="lightbox" title="Choose to delete tweets / Favorites / DMs.." href="images/step1.png" data-lightbox-gallery="step1" data-lightbox-type="inline">
                                                     <div class="thumb-overlay"><i class="fa fa-arrows-alt"></i></div>
                                                     <img alt="" src="images/step1.png" />
                                                 </a>
