--- a/index.html
+++ b/index.html
@@ -809,12 +809,12 @@ Select the tweets to delete grouped by months time range. There is no limits on 
 	<!-- Go To Top Link -->
 	<a href="#" class="back-to-top"><i class="fa fa-angle-up"></i></a>
 
-	<div id="loader">
+	<!--<div id="loader">
 		<div class="spinner">
 			<div class="dot1"></div>
 			<div class="dot2"></div>
 		</div>
-	</div>
+	</div>-->
 
     
     <script type="text/javascript">
