--- a/index.html
+++ b/index.html
@@ -408,14 +408,14 @@
                     </div>
                     
                     <div class="col-md-4 col-sm-12 service-box service-center">
-                        <span href='http://bit.ly/TwitterArchiveEraserSetup2'>
+                        <a href='http://bit.ly/TwitterArchiveEraserSetup2'>
                             <div class="service-icon">
                                 <i class="fa fa-cogs icon-large"></i>
                             </div>
                             <div class="service-content">
                                 <h4>Setup Version (v5.1.2)</h4>
                             </div>
-                        </span>
+                        </a>
                         <div class="service-content">
                             <p>The installer takes care of downloading the required libraries (.NET framework etc.), and installs the application to the start menu.</p>
                         </div>
